--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>wild-eats</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+<nav>
+    <img class="logo" src="logo.png" alt="logo wild-eats"
+    />
+    <h1> Wild-Eats</h1>
+    <div class="menu-toggle">
 
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+</nav>
+
+  </body>
+  <script src="main.js"></script>
+</html>
