--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <div class="bar"></div>
     </div>
 </nav>
-
+<header>
+  <h2> Welcome wilders !</h2>
+  <p>Nous vous avons selectionné les meilleures adresses pour vous restaurer. Nos experts se sont penchés durant de longues séances de dégustations.</p>
+</header>
   </body>
   <script src="main.js"></script>
 </html>
