add restaurants section and pictures

--- a/index.html
+++ b/index.html
@@ -5,24 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>wild-eats</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-<nav>
-    <img class="logo" src="logo.png" alt="logo wild-eats"
-    />
-    <h1> Wild-Eats</h1>
-    <div class="menu-toggle">
-
+    <nav>
+      <img class="logo" src="logo.png" alt="logo wild-eats" />
+      <h1>Wild-Eats</h1>
+      <div class="menu-toggle">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
-    </div>
-</nav>
-<header>
-  <h2> Welcome wilders !</h2>
-  <p>Nous vous avons selectionné les meilleures adresses pour vous restaurer. Nos experts se sont penchés durant de longues séances de dégustations.</p>
-</header>
+      </div>
+    </nav>
+    <header>
+      <h2>Welcome wilders !</h2>
+      <p>
+        Nous vous avons selectionné les meilleures adresses pour vous restaurer.
+        Nos experts se sont penchés durant de longues séances de dégustations.
+      </p>
+    </header>
+    <main>
+      <section class="containerImgrestaurants">
+        <h2>Restaurant</h2>
+        <div>
+          <img
+            class="laGourmandise"
+            src="Pictures Restaurant\laGourmandise.jpg"
+            alt="Restaurant la Gourmandise"
+          />
+          <img
+            class="laLoupiote"
+            src="Pictures Restaurant\laLoupiote.jpg"
+            alt="Restaurant La Loupiote"
+          />
+          <img
+            class="ritalCafe"
+            src="Pictures Restaurant\ritalCafe.jpg"
+            alt="Restaurant Rital Café"
+          />
+        </div>
+      </section>
+    </main>
   </body>
   <script src="main.js"></script>
 </html>
