Div creation on section restaurant

--- a/index.html
+++ b/index.html
@@ -27,19 +27,23 @@
     <main>
       <section class="containerImgrestaurants">
         <h2>Restaurant</h2>
-        <div>
+
+        <div class="imgRestau laGourmandise">
           <img
-            class="laGourmandise"
-            src="Pictures Restaurant\laGourmandise.jpg"
+            src="Pictures Restaurant\La-gourmandise3081243.jpg"
             alt="Restaurant la Gourmandise"
           />
+        </div>
+
+        <div class="imgRestau laLoupiote">
           <img
-            class="laLoupiote"
             src="Pictures Restaurant\laLoupiote.jpg"
             alt="Restaurant La Loupiote"
           />
+        </div>
+
+        <div class="imgRestau ritalCafe">
           <img
-            class="ritalCafe"
             src="Pictures Restaurant\ritalCafe.jpg"
             alt="Restaurant Rital Café"
           />
