Create the 3 sections

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
       <section class="containerImgrestaurants">
-        <h2>Restaurant</h2>
+        <h2>Restaurants</h2>
 
         <div class="imgRestau laGourmandise">
           <img
@@ -47,6 +47,47 @@
             src="Pictures Restaurant\ritalCafe.jpg"
             alt="Restaurant Rital Café"
           />
+        </div>
+      </section>
+
+      <section class="containerFastFood">
+        <h2>Fast-Food</h2>
+
+        <div class="imgFastFood Mcdo">
+          <img
+            src="Pictures Restaurant\La-gourmandise3081243.jpg"
+            alt="Mcdonalds"
+          />
+        </div>
+
+        <div class="imgFastFood restoRapide">
+          <img src="Pictures Restaurant\laLoupiote.jpg" alt="restoRapide" />
+        </div>
+
+        <div class="imgFastFood pizzaDiNapoli">
+          <img src="Pictures Restaurant\ritalCafe.jpg" alt="pizzaDiNapoli" />
+        </div>
+      </section>
+
+      <section class="containerBoulangerie">
+        <h2>Boulangeries</h2>
+
+        <div class="imgBoulangerie saveursEtTraditions">
+          <img
+            src="Pictures Restaurant\La-gourmandise3081243.jpg"
+            alt="saveursEtTraditions"
+          />
+        </div>
+
+        <div class="imgBoulangerie aurelienEtSolene">
+          <img
+            src="Pictures Restaurant\laLoupiote.jpg"
+            alt="aurelienEtSolene"
+          />
+        </div>
+
+        <div class="imgBoulangerie grosChene">
+          <img src="Pictures Restaurant\ritalCafe.jpg" alt="grosChene" />
         </div>
       </section>
     </main>
