Pictures change, test background design

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
         <div class="imgRestau laGourmandise">
           <img
-            src="Pictures Restaurant\La-gourmandise3081243.jpg"
+            src="Pictures Restaurant\la-gourmandise.jpg"
             alt="Restaurant la Gourmandise"
           />
+          <p>La Gourmandise</p>
         </div>
 
         <div class="imgRestau laLoupiote">
@@ -40,13 +41,15 @@
             src="Pictures Restaurant\laLoupiote.jpg"
             alt="Restaurant La Loupiote"
           />
+          <p>La Loupiote</p>
         </div>
 
         <div class="imgRestau ritalCafe">
           <img
-            src="Pictures Restaurant\ritalCafe.jpg"
+            src="Pictures Restaurant\ritalcafé.jpg"
             alt="Restaurant Rital Café"
           />
+          <p>Rital Café</p>
         </div>
       </section>
 
@@ -54,18 +57,19 @@
         <h2>Fast-Food</h2>
 
         <div class="imgFastFood Mcdo">
-          <img
-            src="Pictures Restaurant\La-gourmandise3081243.jpg"
-            alt="Mcdonalds"
-          />
+          <img src="Pictures Fastfood\Mcdonalds.jpg" alt="Mcdonalds" />
+          <p>Mcdonald's</p>
         </div>
 
         <div class="imgFastFood restoRapide">
-          <img src="Pictures Restaurant\laLoupiote.jpg" alt="restoRapide" />
+          <img src="Pictures Fastfood\restorapide.png" alt="restoRapide" />
+          <p>Resto Rapide</p>
         </div>
 
         <div class="imgFastFood pizzaDiNapoli">
-          <img src="Pictures Restaurant\ritalCafe.jpg" alt="pizzaDiNapoli" />
+          <img src="Pictures Fastfood\pizzadinapoli.jpg".jpg"
+          alt="pizzaDiNapoli" />
+          <p>Pizza di Napoli</p>
         </div>
       </section>
 
@@ -74,20 +78,23 @@
 
         <div class="imgBoulangerie saveursEtTraditions">
           <img
-            src="Pictures Restaurant\La-gourmandise3081243.jpg"
+            src="Pictures Boulangerie\saveurEtTraditions.jpg"
             alt="saveursEtTraditions"
           />
+          <p>Saveurs et Traditions</p>
         </div>
 
         <div class="imgBoulangerie aurelienEtSolene">
           <img
-            src="Pictures Restaurant\laLoupiote.jpg"
+            src="Pictures Boulangerie\Aurelienetsolene.jpg"
             alt="aurelienEtSolene"
           />
+          <p>Aurélien et Solène</p>
         </div>
 
         <div class="imgBoulangerie grosChene">
-          <img src="Pictures Restaurant\ritalCafe.jpg" alt="grosChene" />
+          <img src="Pictures Boulangerie\GRoschene.jpg" alt="grosChene" />
+          <p>Le gros chêne</p>
         </div>
       </section>
     </main>
