--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
   </head>
   <body>
     <nav>
-      <img class="logo" src="logo.png" alt="logo wild-eats" />
-      <h1>Wild-Eats</h1>
-      <div class="menu-toggle">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+      <div>
+        <img class="logo" src="logo.png" alt="logo wild-eats" />
+        <h1>Wild-Eats</h1>
+
+        <div class="burger-icon">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+      </div>
+      <div class="menu-burger">
+        <ul class="menu-links">
+          <li><a href="#">Restaurants</a></li>
+          <li><a href="#">Fast-Food</a></li>
+          <li><a href="#">Boulangerie</a></li>
+        </ul>
       </div>
     </nav>
+
     <header>
       <h2>Welcome wilders !</h2>
       <p>
