Fixe burger menu and add h3 under img

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             src="Pictures Restaurant\la-gourmandise.jpg"
             alt="Restaurant la Gourmandise"
           />
-          <p>La Gourmandise</p>
+          <h3>La Gourmandise</h3>
         </div>
 
         <div class="imgRestau laLoupiote">
@@ -52,7 +52,7 @@
             src="Pictures Restaurant\laLoupiote.jpg"
             alt="Restaurant La Loupiote"
           />
-          <p>La Loupiote</p>
+          <h3>La Loupiote</h3>
         </div>
 
         <div class="imgRestau ritalCafe">
@@ -60,7 +60,7 @@
             src="Pictures Restaurant\ritalcafé.jpg"
             alt="Restaurant Rital Café"
           />
-          <p>Rital Café</p>
+          <h3>Rital Café</h3>
         </div>
       </section>
 
@@ -69,18 +69,18 @@
 
         <div class="imgFastFood Mcdo">
           <img src="Pictures Fastfood\Mcdonalds.jpg" alt="Mcdonalds" />
-          <p>Mcdonald's</p>
+          <h3>Mcdonald's</h3>
         </div>
 
         <div class="imgFastFood restoRapide">
           <img src="Pictures Fastfood\restorapide.png" alt="restoRapide" />
-          <p>Resto Rapide</p>
+          <h3>Resto Rapide</h3>
         </div>
 
         <div class="imgFastFood pizzaDiNapoli">
           <img src="Pictures Fastfood\pizzadinapoli.jpg".jpg"
           alt="pizzaDiNapoli" />
-          <p>Pizza di Napoli</p>
+          <h3>Pizza di Napoli</h3>
         </div>
       </section>
 
@@ -92,7 +92,7 @@
             src="Pictures Boulangerie\saveurEtTraditions.jpg"
             alt="saveursEtTraditions"
           />
-          <p>Saveurs et Traditions</p>
+          <h3>Saveurs et Traditions</h3>
         </div>
 
         <div class="imgBoulangerie aurelienEtSolene">
@@ -100,12 +100,12 @@
             src="Pictures Boulangerie\Aurelienetsolene.jpg"
             alt="aurelienEtSolene"
           />
-          <p>Aurélien et Solène</p>
+          <h3>Aurélien et Solène</h3>
         </div>
 
         <div class="imgBoulangerie grosChene">
           <img src="Pictures Boulangerie\GRoschene.jpg" alt="grosChene" />
-          <p>Le gros chêne</p>
+          <h3>Le gros chêne</h3>
         </div>
       </section>
     </main>
