change nav bar and add label

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         </div>
       </div>
       <div class="menu-burger">
-        <ul class="menu-links">
-          <li><a href="#">Restaurants</a></li>
-          <li><a href="#">Fast-Food</a></li>
-          <li><a href="#">Boulangerie</a></li>
-        </ul>
+        <label class= "menu-links" "for="Type">Qu'est-ce qu'on mange ?</label>
+        <select>
+          <option value="all">Tous</option>
+          <option value="Restaurants">Restaurants</option>
+          <option value="Fast-Food">Fast-Food</option>
+          <option value="Boulangeries">Boulangeries</option>
+        </select>
       </div>
     </nav>
 
@@ -45,6 +47,10 @@
             alt="Restaurant la Gourmandise"
           />
           <h3>La Gourmandise</h3>
+          <p>
+            Restaurant de tradition française à coté de la gare. Adresse: 2
+            Place de la Gare, 28240 La Loupe
+          </p>
         </div>
 
         <div class="imgRestau laLoupiote">
