Resolved select button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h2>Welcome wilders !</h2>
       <p>
         Nous vous avons selectionné les meilleures adresses pour vous restaurer.
-        Nos experts se sont penchés durant de longues séances de dégustations.
+        Nos experts se sont penchés sur la question durant de longues séances de dégustations.
       </p>
     </header>
     <main>
@@ -47,11 +47,15 @@
             alt="Restaurant la Gourmandise"
           />
           <h3>La Gourmandise</h3>
-          <p>
-            Restaurant de tradition française à coté de la gare. Adresse: 2
-            Place de la Gare, 28240 La Loupe
-          </p>
+          <div class="description">
+            <p>
+              Restaurant de tradition française à coté de la gare. 
+             Adresse: 2 Place de la Gare, 28240 La Loupe
+            </p>
         </div>
+        </div>
+
+
 
         <div class="imgRestau laLoupiote">
           <img
