Finish adding button and description for each image

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <div>
             <p id="descriptionLaGourmandise" style="display: none">
               Restaurant de tradition française à coté de la gare. 
-             Adresse: 2 Place de la Gare, 28240 La Loupe
+              <br> Adresse : 2 Place de la Gare, 28240 La Loupe</br>
             </p>
-            <button onclick="toggleVisibility()">...</button>
+            <button onclick="toggleVisibilityLaGourmandise()">...</button>
         </div>
         </div>
 
@@ -66,10 +66,10 @@
           <h3>La Loupiote</h3>
           <div>
             <p id="descriptionLaLoupiote" style="display: none">
-              Restaurant de tradition française à coté de la gare. 
-             Adresse: 2 Place de la Gare, 28240 La Loupe
+              Restaurant tradi français. Pour 16euros le menu c'est cadeaux ! 
+             <br>Adresse : 2 rue de l'abrevoir, 28240 La Loupe</br>
             </p>
-            <button onclick="toggleVisibility()">...</button>
+            <button onclick="toggleVisibilityLaLoupiote()">...</button>
         </div>
         </div>
 
@@ -79,6 +79,13 @@
             alt="Restaurant Rital Café"
           />
           <h3>Rital Café</h3>
+          <div>
+            <p id="descriptionRitalCafé" style="display: none">
+              Restaurant de tradition française à coté de la gare. 
+              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+            </p>
+            <button onclick="toggleVisibilityRitalCafé()">...</button>
+        </div>
         </div>
       </section>
 
@@ -88,17 +95,38 @@
         <div class="imgFastFood Mcdo expensive">
           <img src="Pictures Fastfood\Mcdonalds.jpg" alt="Mcdonalds" />
           <h3>Mcdonald's</h3>
+          <div>
+            <p id="descriptionMcdo" style="display: none">
+              McDo tu connais...
+              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+            </p>
+            <button onclick="toggleVisibilityMcdo()">...</button>
+        </div>
         </div>
 
         <div class="imgFastFood restoRapide average">
           <img src="Pictures Fastfood\restorapide.png" alt="restoRapide" />
           <h3>Resto Rapide</h3>
+          <div>
+            <p id="descriptionrestoRapide" style="display: none">
+              McDo tu connais...
+              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+            </p>
+            <button onclick="toggleVisibilityrestoRapide()">...</button>
+        </div>
         </div>
 
         <div class="imgFastFood pizzaDiNapoli cheap">
           <img src="Pictures Fastfood\pizzadinapoli.jpg".jpg"
           alt="pizzaDiNapoli" />
           <h3>Pizza di Napoli</h3>
+          <div>
+            <p id="descriptionpizzaDiNapoli" style="display: none">
+              McDo tu connais...
+              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+            </p>
+            <button onclick="toggleVisibilitypizzaDiNapoli()">...</button>
+        </div>
         </div>
       </section>
 
@@ -111,6 +139,13 @@
             alt="saveursEtTraditions"
           />
           <h3>Saveurs et Traditions</h3>
+          <div>
+            <p id="descriptionsaveursEtTraditions" style="display: none">
+              McDo tu connais...
+              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+            </p>
+            <button onclick="toggleVisibilitysaveursEtTraditions()">...</button>
+        </div>
         </div>
 
         <div class="imgBoulangerie aurelienEtSolene average">
@@ -119,11 +154,25 @@
             alt="aurelienEtSolene"
           />
           <h3>Aurélien et Solène</h3>
+          <div>
+            <p id="descriptionaurelienEtSolene" style="display: none">
+              McDo tu connais...
+              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+            </p>
+            <button onclick="toggleVisibilityaurelienEtSolene()">...</button>
+        </div>
         </div>
 
         <div class="imgBoulangerie grosChene cheap">
           <img src="Pictures Boulangerie\GRoschene.jpg" alt="grosChene" />
           <h3>Le gros chêne</h3>
+          <div>
+            <p id="descriptionagrosChene" style="display: none">
+              McDo tu connais...
+              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+            </p>
+            <button onclick="toggleVisibilitygrosChene()">...</button>
+        </div>
         </div>
       </section>
     </main>
