Color change and resolved groschene problem

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <p>
         Nous vous avons selectionné les meilleures adresses pour vous restaurer.
         Nos experts se sont penchés sur la question durant de longues séances de dégustations.
+        Naviguez dans les différentes sections et faites votre choix !
       </p>
     </header>
     <main>
@@ -56,7 +57,7 @@
           <h3>La Gourmandise</h3>
           <div>
             <p id="descriptionLaGourmandise" style="display: none">
-              Restaurant de tradition française à coté de la gare. 
+              Restaurant de tradition française à coté de la gare. <br>
               <br> Adresse : 2 Place de la Gare, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilityLaGourmandise()">...</button>
@@ -73,7 +74,7 @@
           <h3>La Loupiote</h3>
           <div>
             <p id="descriptionLaLoupiote" style="display: none">
-              Restaurant tradi français. Pour 16euros le menu c'est cadeaux ! 
+              Restaurant tradi français. Pour 16euros le menu c'est cadeaux ! <br>
              <br>Adresse : 2 rue de l'abrevoir, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilityLaLoupiote()">...</button>
@@ -88,8 +89,10 @@
           <h3>Rital Café</h3>
           <div>
             <p id="descriptionRitalCafé" style="display: none">
-              Restaurant de tradition française à coté de la gare. 
-              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+              Laissez vous tenter par n’importe quelle pizza! La Qualité est constante , et les pizzas toujours généreuses ! 
+              <br>
+              <br> Services disponibles: Repas sur place · Vente à emporter</br>
+              <br> Adresse: 7 Rue Delaperelle, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilityRitalCafé()">...</button>
         </div>
@@ -104,8 +107,9 @@
           <h3>Mcdonald's</h3>
           <div>
             <p id="descriptionMcdo" style="display: none">
-              McDo tu connais...
-              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+              Classique, rapide, efficace, tout le monde connaît le géant américain du fast food.<br>
+              <br>Services disponibles: Repas sur place · Vente à emporter </br>
+              <br> Adresse: 2 Impasse de la Cerisaie, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilityMcdo()">...</button>
         </div>
@@ -116,8 +120,9 @@
           <h3>Resto Rapide</h3>
           <div>
             <p id="descriptionrestoRapide" style="display: none">
-              McDo tu connais...
-              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+              Copieux bien garnie avec de la viande de qualité !<br>
+              <br>Services disponibles: Repas sur place · Vente à emporter<br>
+              <br>Adresse : Rue Delaperelle, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilityrestoRapide()">...</button>
         </div>
@@ -129,8 +134,9 @@
           <h3>Pizza di Napoli</h3>
           <div>
             <p id="descriptionpizzaDiNapoli" style="display: none">
-              McDo tu connais...
-              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+              En livraison ou à emporter toujours bien reçu et bien servi ! Une équipe au top.<br>
+              <br>Services disponibles: Repas sur place · Drive disponible · Livraison<br>
+              <br> Adresse: 1 rue Paul Eluard, 28240 la Loupe</br>
             </p>
             <button onclick="toggleVisibilitypizzaDiNapoli()">...</button>
         </div>
@@ -148,8 +154,8 @@
           <h3>Saveurs et Traditions</h3>
           <div>
             <p id="descriptionsaveursEtTraditions" style="display: none">
-              McDo tu connais...
-              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+              Accueil courtois, cadre de qualité, un large choix de gâteaux. Le pain, les viennoiseries et la pâtisserie sont excellents..<br>
+              <br> Adresse: 7 Rue de l'Église, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilitysaveursEtTraditions()">...</button>
         </div>
@@ -163,7 +169,9 @@
           <h3>Aurélien et Solène</h3>
           <div>
             <p id="descriptionaurelienEtSolene" style="display: none">
-              McDo tu connais...
+              Rapide dans le service. Propreté de la boutique.
+              Personnel agréable à l'écoute. Essayez leurs madeleines !<br>
+
               <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilityaurelienEtSolene()">...</button>
@@ -174,9 +182,9 @@
           <img src="Pictures Boulangerie\GRoschene.jpg" alt="grosChene" />
           <h3>Le gros chêne</h3>
           <div>
-            <p id="descriptionagrosChene" style="display: none">
-              McDo tu connais...
-              <br> Adresse: 2 Place de la Gare, 28240 La Loupe</br>
+            <p id="descriptiongrosChene" style="display: none">
+              L'accueil est très sympathique, et la boutique possède un grand choix de pains, de viennoiseries et de pâtisseries.<br>
+              <br> Adresse: 3 Rue de Châteaudun, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilitygrosChene()">...</button>
         </div>
