finish filters end starting desktop version

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         <label class= "menu-links" "for="Price">Combien t'as?</label>
         <select id = "select2">
+          <option value="all">Tous</option>
           <option value="expensive">Chers</option>
           <option value="average">Moyen</option>
           <option value="cheap">Pas chers</option>
