site responsive done

--- a/index.html
+++ b/index.html
@@ -193,8 +193,10 @@
             <button onclick="toggleVisibilitygrosChene()">...</button>
         </div>
         </div>
+        
       </section>
     </main>
+    <footer> miam-miam&co </footer>
   </body>
   <script src="main.js"></script>
 </html>
