--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           <h3>La Gourmandise</h3>
           <div>
             <p id="descriptionLaGourmandise" style="display: none">
-              Restaurant de tradition française à coté de la gare. <br>
+              Très bon restaurant ou vous serez très bien accueilli par une équipe très aimable et souriante. Une cuisine raffinée et bien élaborée avec de très bon produits. <br>
+              <br>Services disponibles: Repas sur place</br>
               <br> Adresse : 2 Place de la Gare, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilityLaGourmandise()">...</button>
@@ -76,7 +77,8 @@
           <h3>La Loupiote</h3>
           <div>
             <p id="descriptionLaLoupiote" style="display: none">
-              Restaurant tradi français. Pour 16euros le menu c'est cadeaux ! <br>
+              Le restaurant propose de la nourriture de très bonne qualité, faite avec des produits locaux. Ambiance sympathique et l'équipe est serviable! <br>
+              <br>Services disponibles: Repas sur place</br>
              <br>Adresse : 2 rue de l'abrevoir, 28240 La Loupe</br>
             </p>
             <button onclick="toggleVisibilityLaLoupiote()">...</button>
@@ -196,7 +198,6 @@
         
       </section>
     </main>
-    <footer> miam-miam&co </footer>
   </body>
   <script src="main.js"></script>
 </html>
