final correction and commit

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         </div>
 
-        <div2 class="imgFastFood restoRapide average">2
+        <div class="imgFastFood restoRapide average">
           <img src="Pictures Fastfood\restorapide.png" alt="restoRapide" />
           <h3>Resto Rapide</h3>
           <div>
